python/tests/gold/tlscontextciphersuites/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "secret": [
            {
                "apiVersion": "v1",
                "data": {
                    "tls.crt": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnRENDQW1pZ0F3SUJBZ0lKQUpycUl0ekY2MTBpTUEwR0NTcUdTSWIzRFFFQkN3VUFNRlV4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVFzd0NRWURWUVFLREFKRQpWekViTUJrR0ExVUVBd3dTZEd4ekxXTnZiblJsZUhRdGFHOXpkQzB4TUI0WERURTRNVEV3TVRFek5UTXhPRm9YCkRUSTRNVEF5T1RFek5UTXhPRm93VlRFTE1Ba0dBMVVFQmhNQ1ZWTXhDekFKQmdOVkJBZ01BazFCTVE4d0RRWUQKVlFRSERBWkNiM04wYjI0eEN6QUpCZ05WQkFvTUFrUlhNUnN3R1FZRFZRUUREQkowYkhNdFkyOXVkR1Y0ZEMx [...]
                    "tls.key": "LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQzlPZ0M4d3h5SXJQem8KR1hzTHBQS3Q3MkRFeDJ3andXOG5YVzJ3V2J5YTNjOTZuMm5TQ0tQQm44NWhicXNoemo1aWhTVEFNRElvZzlGdgpHNlJLV1VQWFQ0S0lrVHYzQ0RIcVhzQXBKbEo0bFN5blF5bzJadjBvK0FmOENMbmdZWkIrcmZ6dFp3eWVEaFZwCndZekJWMjM1eno2KzJxYlZtQ1psdkJ1WGJVcVRsRVlZdnVHbE1HejdwUGZPV0tVcGVZb2RiRzJmYitoRkZwZW8KQ3hrVVhyUXNPb1I1SmRIRzVqV3JadUJPNDU1U3NyekJMOFJsZTVVSG8wNVdjSzdiQmJpUXoxMDZwSENKWVor [...]
                },
                "kind": "Secret",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"data\":{\"tls.crt\":\"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnRENDQW1pZ0F3SUJBZ0lKQUpycUl0ekY2MTBpTUEwR0NTcUdTSWIzRFFFQkN3VUFNRlV4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVFzd0NRWURWUVFLREFKRQpWekViTUJrR0ExVUVBd3dTZEd4ekxXTnZiblJsZUhRdGFHOXpkQzB4TUI0WERURTRNVEV3TVRFek5UTXhPRm9YCkRUSTRNVEF5T1RFek5UTXhPRm93VlRFTE1Ba0dBMVVFQmhNQ1ZWTXhDekFKQmdOVkJBZ01BazFCTVE4 [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:17Z",
                    "labels": {
                        "kat-ambassador-id": "tlscontextciphersuites",
                        "scope": "AmbassadorTest"
                    },
                    "name": "secret.cipher-suites",
                    "namespace": "default",
                    "resourceVersion": "61191",
                    "selfLink": "/api/v1/namespaces/default/secrets/secret.cipher-suites",
                    "uid": "1e393f9c-33ca-11ea-966c-16b58b03f3a1"
                },
                "type": "kubernetes.io/tls"
            }
        ],
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Mapping\nname: TLSContextCipherSuites-same-prefix-1\nprefix: /tls-context-same/\nservice: https://tlscontextciphersuites-http\nhost: tls-context-host-1\nambassador_id: tlscontextciphersuites\n\n---\napiVersion: ambassador/v1\nkind: TLSContext\nname: TLSContextCipherSuites-same-context-1\nhosts:\n- tls-context-host-1\nsecret: secret.cipher-suites\nsecret_namespacing: False\nmax_tls_version: v1.2\ncipher_suit [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: TLSContextCipherSuites-same-prefix-1\\nprefix: /tls-context-same/\\nservice: https://tlscontextciphersuites-http\\nhost: tls-context-host-1\\nambassador_id: tlscontextciphersuites\\n\\n---\\napiVersion: ambassador/v1\\nkind: TLSContext\\nname: TLSContextCipherSu [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:15Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "tlscontextciphersuites",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlscontextciphersuites",
                    "namespace": "default",
                    "resourceVersion": "61172",
                    "selfLink": "/api/v1/namespaces/default/services/tlscontextciphersuites",
                    "uid": "1d01e8c4-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.106.183.98",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31290,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 31751,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "tlscontextciphersuites"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlscontextciphersuites\",\"scope\":\"AmbassadorTest\",\"service\":\"tlscontextciphersuites-admin\"},\"name\":\"tlscontextciphersuites-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"tlscontextciphersuites-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"tlscontextcip [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:16Z",
                    "labels": {
                        "kat-ambassador-id": "tlscontextciphersuites",
                        "scope": "AmbassadorTest",
                        "service": "tlscontextciphersuites-admin"
                    },
                    "name": "tlscontextciphersuites-admin",
                    "namespace": "default",
                    "resourceVersion": "61180",
                    "selfLink": "/api/v1/namespaces/default/services/tlscontextciphersuites-admin",
                    "uid": "1dd44575-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.96.53.60",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "tlscontextciphersuites-admin",
                            "nodePort": 30584,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "tlscontextciphersuites"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlscontextciphersuites\",\"scope\":\"AmbassadorTest\"},\"name\":\"tlscontextciphersuites-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8129},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8492}],\"selector\":{\"b [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:17Z",
                    "labels": {
                        "kat-ambassador-id": "tlscontextciphersuites",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlscontextciphersuites-http",
                    "namespace": "default",
                    "resourceVersion": "61195",
                    "selfLink": "/api/v1/namespaces/default/services/tlscontextciphersuites-http",
                    "uid": "1e70d98d-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.103.209.171",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8129
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8492
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
